# stackment

./: Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: build-all.yaml
app/skmtapp/: README.md  pubspec.yaml
app/skmtapp/android/app/: build.gradle
app/skmtapp/android/app/src/debug/: AndroidManifest.xml
app/skmtapp/android/app/src/main/: AndroidManifest.xml
app/skmtapp/android/app/src/main/kotlin/com/example/skmtapp/: MainActivity.kt
app/skmtapp/lib/: main.dart
app/skmtapp/linux/: CMakeLists.txt  my_application.cc
app/skmtapp/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/skmtapp/test/: widget_test.dart
app/skmtapp/windows/: CMakeLists.txt
app/skmtapp/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/skmtapp/windows/runner/: Runner.rc  main.cpp
app/skmtdart/: .gitignore  Cargo.toml  Makefile.toml  README.md  pubspec.yaml
app/skmtdart/android/: build.gradle  settings.gradle
app/skmtdart/android/src/main/: AndroidManifest.xml
app/skmtdart/android/src/main/kotlin/org/stackment/skmtdart/skmtdart/: SkmtdartPlugin.kt
app/skmtdart/lib/: skmtdart.dart
app/skmtdart/linux/: CMakeLists.txt  skmtdart_plugin.cc
app/skmtdart/linux/include/skmtdart/: skmtdart_plugin.h
app/skmtdart/native/skmtdart_ffi/: Cargo.toml  build.rs  cbindgen.toml  pubspec.yaml
app/skmtdart/native/skmtdart_ffi/src/: lib.rs
app/skmtdart/test/: ffi_test.dart  skmtdart_test.dart
app/skmtdart/windows/: CMakeLists.txt  skmtdart_plugin.cpp
app/skmtdart/windows/include/skmtdart/: skmtdart_plugin.h
cli/: Cargo.toml
core/inventory/: Cargo.toml
core/inventory/assets/: database.sql
core/proto/: Cargo.toml
services/discovery/: Cargo.toml
services/hub/: Cargo.toml
services/relay/: Cargo.toml
tui/: Cargo.toml
