[package]
name = "stackment"
version = "0.1.0"
authors = ["Daniel Vogelbacher <daniel@chaospixel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smtinventory = { path = "../core/inventory" }
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4"
clap = "2"
tempfile = "3.0.7"
dirs = "2.0.1"#
prettytable-rs = "^0.8"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
tokio = { version = "0.2", features = ["full"] }
