[package]
name = "skmtdart_ffi"
version = "0.1.0"
authors = ["Daniel Vogelbacher <daniel@chaospixel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "skmtdart_ffi"
crate-type = ["rlib"]



[dependencies]
libc = "0.2"

[build-dependencies]
cbindgen = "0.18"

